--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "packageManager": "pnpm@7.18.2",
   "engines": {
     "node": "=18.12.1",
     "pnpm": "=7.18.2"
