--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bread-receipes",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/ktung/bread-receipes",
   "type": "module",
   "scripts": {
     "dev": "vite",
