--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "lint": "tsc",
     "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx"
+    "eslint": "eslint . --ext .ts,.tsx"
   },
-  "packageManager": "pnpm@7.18.2",
+  "packageManager": "pnpm@7.21.0",
   "engines": {
     "node": "=18.12.1",
-    "pnpm": "=7.18.2"
+    "pnpm": "=7.21.0"
   },
   "dependencies": {
     "i18next": "^22.4.6",
@@ -39,6 +40,7 @@
     "prettier": "2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
+    "turbo": "^1.6.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
