--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "lint": "tsc",
     "preview": "vite preview",
-    "eslint": "eslint . --ext .ts,.tsx"
+    "eslint": "eslint . --ext .ts,.tsx",
+    "prepare": "husky install"
   },
   "packageManager": "pnpm@7.21.0",
   "engines": {
@@ -36,6 +37,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.3",
     "postcss": "^8.4.20",
     "prettier": "2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
