--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "packageManager": "pnpm@8.7.1",
   "engines": {
-    "node": "=18.14.0",
-    "pnpm": "=8.7.1"
+    "node": ">=18.14.0",
+    "pnpm": ">=8.7.1"
   },
   "dependencies": {
     "i18next": "^22.4.9",
