ci: output outdated to summary

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Check outdated
         continue-on-error: true
-        run: pnpm outdated
+        run: pnpm outdated --format list --long >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: Deploy
