--- a/package.json
+++ b/package.json
@@ -18,35 +18,37 @@
     "pnpm": ">=8.7.1"
   },
   "dependencies": {
-    "i18next": "^23.7.6",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "i18next": "^23.16.4",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.6.2",
+    "pnpm": "^9.12.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "husky": "^8.0.3",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.47",
     "prettier": "3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "turbo": "^1.10.16",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.14",
+    "turbo": "^1.13.4",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   },
   "volta": {
-    "node": "18.14.0"
+    "node": "20.18.0",
+    "pnpm": "9.12.2"
   }
 }
