--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bread-recipes",
+  "name": "cookbook",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/ktung/bread-recipes",
+  "homepage": "https://github.com/ktung/cookbook",
   "type": "module",
   "scripts": {
     "dev": "vite",
