--- a/package.json
+++ b/package.json
@@ -1,54 +1,32 @@
 {
   "name": "cookbook",
   "private": true,
-  "version": "0.0.0",
-  "homepage": "https://github.com/ktung/cookbook",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
-    "lint": "tsc",
     "preview": "vite preview",
-    "eslint": "eslint . --ext .ts,.tsx",
-    "prepare": "husky install"
-  },
-  "packageManager": "pnpm@8.7.1",
-  "engines": {
-    "node": ">=18.14.0",
-    "pnpm": ">=8.7.1"
-  },
-  "dependencies": {
-    "i18next": "^23.16.4",
-    "i18next-browser-languagedetector": "^7.2.1",
-    "i18next-http-backend": "^2.6.2",
-    "pnpm": "^9.15.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^13.5.0"
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react-swc": "^3.7.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
+    "@eslint/compat": "^1.2.3",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "husky": "^8.0.3",
-    "postcss": "^8.4.47",
-    "prettier": "3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.14",
-    "turbo": "^1.13.4",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10"
-  },
-  "volta": {
-    "node": "20.18.0",
-    "pnpm": "9.12.2"
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
+    "prettier": "^3.3.2",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.4.11"
   }
 }
