--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
     "vite": "^6.0.7",
-    "@inlang/paraglide-js": "^1.11.7"
+    "@inlang/paraglide-js": "^1.11.7",
+    "@types/sanitize-html": "^2.13.0",
+    "sanitize-html": "^2.14.0"
   },
   "dependencies": {
     "@inlang/paraglide-sveltekit": "^0.15.3"
