--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Build project
         env:
+          ADAPTER: static
           ASSETS_PATH: https://ktung.github.io/cookbook
           BASE_PATH: '/${{ github.event.repository.name }}'
         run: |
