--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "2.0.0",
   "type": "module",
-  "packageManager": "pnpm@9.15.3",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
-    "node": ">=22.12.0",
-    "pnpm": ">=9.15.3"
+    "node": ">=22.13.1",
+    "pnpm": ">=9.15.4"
   },
   "volta": {
-    "node": "22.12.0",
-    "pnpm": "9.15.3"
+    "node": "22.13.1",
+    "pnpm": "9.15.4"
   },
   "scripts": {
     "dev": "vite dev",
@@ -23,30 +23,35 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "svelte": "^5.17.4",
-    "svelte-check": "^4.1.4",
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.15.2",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@eslint/compat": "^1.2.5",
-    "eslint": "^9.18.0",
+    "@inlang/paraglide-js": "^1.11.7",
+    "@sveltejs/adapter-auto": "^4.0.0",
+    "@sveltejs/adapter-cloudflare": "^5.0.1",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/adapter-vercel": "^5.5.3",
+    "@sveltejs/kit": "^2.16.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/js-yaml": "^4.0.9",
+    "@types/sanitize-html": "^2.13.0",
+    "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
     "husky": "^9.1.7",
-    "@types/js-yaml": "^4.0.9",
     "js-yaml": "^4.1.0",
     "marked": "^15.0.6",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.3.3",
+    "sanitize-html": "^2.14.0",
+    "svelte": "^5.19.3",
+    "svelte-check": "^4.1.4",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.7",
-    "@inlang/paraglide-js": "^1.11.7",
-    "@types/sanitize-html": "^2.13.0",
-    "sanitize-html": "^2.14.0"
+    "typescript-eslint": "^8.21.0",
+    "vite": "^6.0.11"
   },
   "dependencies": {
-    "@inlang/paraglide-sveltekit": "^0.15.3"
+    "@inlang/paraglide-sveltekit": "^0.15.3",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0"
   }
 }
