--- a/static/recipes/100-financiers.yml
+++ b/static/recipes/100-financiers.yml
@@ -12,11 +12,89 @@ ingredients:
     percentage: 66.6
   - name: whiteSugar
     percentage: 111
-totalPercentage: 410.9
 presetTotalIngredient: 740
 process:
+  fr: |
+    1. Faire fondre le beurre
+    2. Blanc oeuf
+    3. Sec (farine, poudre amande, sucre)
+    4. Add beurre fondu (froid)
+    5. Add vanille 4g
+    6. Préchauffer 200C
+    7. Cuisson 200C 20mins
+    8. Laisser refroidir complementement avant de démouler
+notes:
   fr: |
     1 blanc oeuf ~= 30g
     Moule rond 60g
     Moule rectangle 100g
     Cuisson 25-30mins 200C conventionnel
+
+
+# ---
+# title: "Financier"
+# categories: ["Cooking"]
+# date: 2023-11-04T18:02:38+02:00
+# draft: true
+# ---
+
+# |10 financier
+# |-|-|
+# |Beurre non salé|115|
+# |Sucre érable|220|
+# |Poudre amandes|75|
+# |Farine tout usage|72|
+# |Blanc oeuf|6|
+# |Huile canola|65|
+
+# 1. Cuire le beurre jusqu'à coloration puis laisser tempérer
+# 2. Dans un bol, mélanger le sec
+# 3. Ajouter les blancs oeuf
+# 4. Ajouter beurre noisette et l'huile canola
+# 5. Filme contact et repos 3h réfrigérateur
+# 6. Préchauffer 180C
+# 7. Cuisson 180C 15-20mins
+# 8. Laisser refroidir complementement avant de démouler
+
+# # Notes
+# - should 70g/u
+
+# # References
+# - https://www.ricardocuisine.com/recettes/5615-financiers-au-sucre-d-erable-de-patrice-demers
+# ---
+# |9 financier
+# |-|-|
+# |Beurre non salé|112,5|
+# |Sucre|225|
+# |Poudre amandes|75|
+# |Farine tout usage|75|
+# |Blanc oeuf|6|
+# |Extrait vanille|1càc|
+# |Sel|1pincée|
+
+# 1. Préchauffer 200C
+# 2. Cuire le beurre jusqu'à coloration puis laisser tempérer
+# 3. Dans un bol, mélanger le sec
+# 4. Monter les blancs en neige
+# 5. Ajouter les blancs oeuf
+# 6. Ajouter beurre noisette
+# 7. Cuisson 200C 15-20mins
+# 8. Laisser refroidir complementement avant de démouler
+
+# # Notes
+# - should 70g/u
+
+# # References
+# - https://www.ricardocuisine.com/recettes/5615-financiers-au-sucre-d-erable-de-patrice-demers
+# - https://www.marmiton.org/recettes/recette_financier-minute-pour-utiliser-des-blancs-d-oeuf_17526.aspx
+# - https://www.marmiton.org/recettes/**recette_financiers_13690.aspx
+# ---
+# https://www.youtube.com/watch?v=4CJtTKS1XF4
+# https://www.youtube.com/watch?v=r2e_hLrdY_0
+
+
+# financier
+# https://www.youtube.com/watch?v=ObKCj92Gubw
+# https://www.instagram.com/p/C7tS69aoRBS/
+
+# https://www.ricardocuisine.com/recettes/5615-financiers-au-sucre-d-erable-de-patrice-demers
