--- a/static/price/cad.yml
+++ b/static/price/cad.yml
@@ -54,3 +54,11 @@ porkBelly:
   price: 0.01654696133 # 5.99/362
   source: Marche Newon
   lastCheckDate: 2025-01-26
+wholeMilk3_25:
+  price: 0.00235 # 2.35/1000
+  source: IGA
+  lastCheckDate: 2025-01-30
+potatoes:
+  price: 0.00131938326 # 5.99/4540
+  source: IGA
+  lastCheckDate: 2025-01-30
