--- a/static/recipes/100-creme-brulee.yml
+++ b/static/recipes/100-creme-brulee.yml
@@ -4,7 +4,7 @@ name:
 ingredients:
   - name: cream35
     percentage: 50
-  - name: wholeMilk
+  - name: wholeMilk3_25
     percentage: 50
   - name: eggYolk
     percentage: 20
