--- a/static/notes/fr/list.yml
+++ b/static/notes/fr/list.yml
@@ -2,6 +2,8 @@
   title: Épices
 - slug: 100-materiel
   title: Materiel
+- slug: 100-saison
+  title: Saison
 - slug: 100-stovetop
   title: Ma plaque
 - slug: 100-temperatures
