--- a/static/recipes/list.yml
+++ b/static/recipes/list.yml
@@ -146,3 +146,7 @@
   name:
     fr: 301 - Pâte levée feuilletée
     en: 301 - Pâte levée feuilletée
+- filename: 400-burger.yml
+  name:
+    fr: 400 - Burger
+    en: 400 - Burger
