update brioche and add chantilly

--- a/static/recipes/200-brioche.yml
+++ b/static/recipes/200-brioche.yml
@@ -23,3 +23,57 @@ notes:
     Courrone : 400g
     Tresse 3 brins : 450g (3*150)
     Tresse 1 brin : 70g
+
+# |-|-|-|
+# |Farine T45|1000g|220|
+# |Sel|18g|4|
+# |Sucre blanc|120g|26,4|
+# |Levure seche|20g|4,4|
+# |Lait amande|500g|110|
+# |Oeuf|100g|22|
+# |Beurre pommade|300g|66|
+# |Total|2068|455|
+
+# 1. Pétrissage
+#    1. Long Xmins
+#    2. Stretch and fold
+#    3. Beurre à la fin
+# 2. Pointage
+#    1. 2h : Pate 24°C, Air 22°C
+# 3. Bien dégazer
+# 4. Faconnage
+#    1. Nanterre : 8 boules
+#    2. Tressée 3 brins : 3 brins paralleles : gauche au milieu, droite au milieu, gauche au milieu, etc.
+#    3. Butchy
+#    4. Couronne
+#    5. Briochettes
+# 5. Apprêt 2h : témpérature ambiante X°C
+# 6. Cuisson 35-45mins 180°C ventilé (selon poids, moule)
+# 7. Démouler et ressuage 30mins - 1h
+
+# # Conservation
+# - Congélateur en tranche, puis au toaster
+
+# # Notes
+# - Si possible ne pas laver le moule, ça gardera le gras pour la prochaine fois
+# - Farine de force : forte en protéines
+# - Liquide ~60%
+# - Beurre 30-50%
+# - Sucre 12-15%
+# - Moule à pain : 19,1 x 10,2 x 11,2 = 2182g
+
+# # References
+# - https://www.youtube.com/watch?v=3-ypma2pwr0
+
+
+
+# nanterre : 8x50g
+# courrone : 400g
+# tresse 3brins : 450g = 3*150g
+# tresse 1brin : 70g
+
+# Cuisson: 15 à 30 min à 160°C selon le poids. (170°C)
+# - tresse 1 brin : 25mins
+# - couronne : 35min
+
+# cuisson doit se tenir, pas mou
