--- a/static/recipes/100-muffins-bleuet.yml
+++ b/static/recipes/100-muffins-bleuet.yml
@@ -22,7 +22,8 @@ presetTotalIngredient: 811
 process:
   fr: |
     - Fariner les bleuets
-    - Cuisson 12-15mins 180°C conventionel
+    - Cuisson 20mins 180°C conventionel
+    - Tester avec un couteau ou un testeur
 notes:
   fr: |
     - 8 muffins de 70g-100g ?
