--- a/static/recipes/302-pate-levee-feuilletee.yml
+++ b/static/recipes/302-pate-levee-feuilletee.yml
@@ -3,103 +3,46 @@ name:
   fr: 302 - Pâte levée feuilletée
 ingredients:
   - name: allPurposeFlour
-    percentage: 100
-presetTotalIngredient: 100
+    percentage: 40
+  - name: flour00
+    percentage: 60
+  - name: whiteSugar
+    percentage: 14
+  - name: salt
+    percentage: 2
+  - name: instantYeast
+    percentage: 2
+  - name: unsaltedButter82
+    percentage: 10
+  - name: wholeMilk3_25
+    percentage: 20
+  - name: water
+    percentage: 30
+  - name: unsaltedButter82
+    percentage: 54
+presetTotalIngredient: 600
 process:
   fr: |
-    - Démarrer la poolish 60%
-      - Mélanger eau, levure, farine
-      - Laisser pousser jusqu'à avoir beaucoup de bulles à la surface, consistence assez liquide
-    - Pétrissage
-      - Mélanger l'ensemble des ingrédients, beurre à la fin
-    - Filmer. Pointage 10-30 mins (20-22°C)
-    - Abaisse 1-2cm d'épaisseur
-    - 15-30mins congel pour bloquer la fermentation
-    - Passage frigo 4°C 30mins - 12h
-    - Préparer beurre tourrage à la taille L/2 x l et épaisseur bien répartit
-    - Incorporer le beurre : même consistence que la pate
-    - Abaisse 4-5mm d'épaisseur (~50x20cm)
-    - Tour double, ouvrir les plis
-    - Froid 30mins minimum
-    - Abaisse 4-5mm d'épaisseur (~47x20cm)
-    - Tour simple, ouvrir les plis
-    - Froid 30mins minimum
-    - Abaisse 27x27cm
-    - Détaillage
-      - 2 croissants : 8x28cm, pis diagonale
-      - 1 chocolatine : 8x15x0,04cm
-    - Façonnage
-      - Entaille la base au milieu de 1-1,5cm pour étirer
-      - Enrouler sans appuyer pour ne pas abimer le feuillatage
-      - Pointe en bas pour pas que ça se décolle à la cuisson
-    - Apprêt 2h-2h30 27°-28°. Hygrométrie 85% (Pas trop chaud, le beurre ne doit pas fondre)
-    - Dorer avec un spray pour une pas abimer les feuillets
-    - Cuisson ventilé sur plaque perforée minimum 16mins
-      - Doit bien avoir sécher : peut être soulever sans se plier
-    - Ressuage grille 20mins
+    -
 notes:
   fr: |
-    - Poolish :
-      - Farine = Eau
-      - + une partie de la levure (dépend du temps accordé à la fermentation)
-    - Beurre de tourrage 25 à 27% de la détrempe (~120g)
-    - 1 croissant pro = 70-80g de pate cru
-    - 1 croissant CAP/maison = 65-70g de pate cru
-    - Congel : décongeler la veille dans le four éteint (8h), préchauffer, dorer, cuisson.
-    - 45-50% hydratation (lait + eau)
-    - Lors de la découpe de la pate, si rétrécit = trop chaud
-    - Toujours avoir la même consistence pâte/beurre pour que le beurre ne marbre pas la pâte
-    - Remplacer le beurre de tourrage
-      - Utiliser un beurre avec minimum 82% de matiere grasses
-      - Utiliser un beurre "sec" : avec le plus d'acides gras saturés. Ça devrait augmenter la témpérature de fusion
+    -
 references:
+  -
   # - https://www.youtube.com/watch?v=al--1T_9lgM
   # - https://www.youtube.com/watch?v=Ku9wAbLbI9A
-  - http://technomitron.aainb.com/constituants-viennoiserie-patisserie/le-beurre/
-  - https://karine-cuisine.blogspot.com/2017/08/les-croissants-la-pate-feuilletee-levee.html
-  - http://technomitron.aainb.com/recettes-2/viennoiserie/pate-levee-feuilletee-riche-sur-poolish-1-3-rapide/
-  - https://www.youtube.com/watch?v=tO4C1Ur-OZA
-  - https://www.youtube.com/watch?v=TN4jkD43ymI
-  - https://www.youtube.com/watch?v=9nqe3Pjh5F8
-  - https://www.youtube.com/watch?v=9-pZt0_wMDQ
-  - https://www.youtube.com/watch?v=50-yxbahn5I
-  - https://www.youtube.com/watch?v=2wsiqF65Dec
-  - https://www.youtube.com/watch?v=QBHdCd0u6UE
-  - https://www.youtube.com/watch?v=zJB0MWkyy4c
-  - https://www.youtube.com/watch?v=bWkqIdZZJdY
-  - https://www.youtube.com/watch?v=6EiPq6q_-kg
-  - https://www.youtube.com/watch?v=d-qe7eaZ2qY
-  - https://www.youtube.com/watch?v=ByARoxgNEjo
-  - https://chefmaillardtpropat.wordpress.com/la-poolish/
-  - https://www.youtube.com/watch?v=2NC0W5Xtvoc
-# | - | - | - |
-# |-|-|-|
-# |Farine T55|1000g|250g|
-# |Sucre blanc|140g|35g|
-# |Sel|20g|5g|
-# |Levure seche|30g|7,5g|
-# |Beurre froid détrempe|100g|25g|
-# |Lait amande|200g|50g|
-# |Eau|300g|75g|
-# |Total|1790g|448g|
-
-# Poolish 60% de liquide
-# Levure fraiche (g) = litre eau * 40 / temps (h)
-# |-|-|-|
-# |Farine T55|-|75g|
-# |Eau|-|75g|
-# |Levure fraiche 60mins|-|0,075*40/1 = 3g|
-# |Levure seche 20-60mins|-|7,5g|
-
-# Pétrissée
-# |-|-|-|
-# |Farine T55|-|175g|
-# |Sucre|-|35g|
-# |Sel|-|5g|
-# |Levure seche|-|-|
-# |Beurre détrempe|-|25g|
-# |Lait amande|-|50g|
-
+  # - http://technomitron.aainb.com/constituants-viennoiserie-patisserie/le-beurre/
+  # - https://karine-cuisine.blogspot.com/2017/08/les-croissants-la-pate-feuilletee-levee.html
+  # - http://technomitron.aainb.com/recettes-2/viennoiserie/pate-levee-feuilletee-riche-sur-poolish-1-3-rapide/
+  # - https://www.youtube.com/watch?v=tO4C1Ur-OZA
+  # - https://www.youtube.com/watch?v=TN4jkD43ymI
+  # - https://www.youtube.com/watch?v=9nqe3Pjh5F8
+  # - https://www.youtube.com/watch?v=9-pZt0_wMDQ
+  # - https://www.youtube.com/watch?v=50-yxbahn5I
+  # - https://www.youtube.com/watch?v=2wsiqF65Dec
+  # - https://www.youtube.com/watch?v=QBHdCd0u6UE
+  # - https://www.youtube.com/watch?v=zJB0MWkyy4c
+  # - https://www.youtube.com/watch?v=bWkqIdZZJdY
 # ## Cuisson
 # > 17mins 200°C ventilé sur plaque perforée :
 # > 17mins 190°C ventilé sur plaque perforée.
@@ -114,6 +57,8 @@ references:
 # - Beurre froid "dur", sortir le beurre. Attendre jusqu'à qu'il soit plastique puis sortir le paton. Pour avoir la même consistence
 # - Test de pétrissage : prendre une part, bouler, étirer. Réseau non créée = le croissant peut casser à la pousse
 
-# https://www.youtube.com/watch?v=g9MpP4OOpms
-# https://terracaf.ca/fr/blogs/blog/difference-between-dutch-and-natural-cocoa
-# Poudre cacao 50g (pour 1000g farine)
+# english lock in 5ply
+# abaisse 4mm, tour simple, spray entre les tours pour aider à coller
+# abaisse 5mm, repli en 2
+# croissant 30x10cm
+
