--- a/static/recipes/100-pizza-dough.yml
+++ b/static/recipes/100-pizza-dough.yml
@@ -13,6 +13,20 @@ ingredients:
   - name: oliveOil
     percentage: 3
 presetTotalIngredient: 826
+process:
+  fr: |
+    - Réhydrateer la levure
+    - Pétrissage 4mins30 Farine + levure + sel
+    - Ajouter l'huile d'olive, pétrir 2mins
+    - Pointage 30mins
+    - Rabat, 20mins
+    - Détailler 270g, bouler, détente 20mins
+    - Pointage jusqu'à utilisation (2h-) 48h
+    - Étaler la pate à la main avec semoule fine de blé dur
 notes:
   fr: |
     1 pâton = 270g
+references:
+  - https://www.instagram.com/stories/highlights/17899490623467176/?hl=fr
+  - https://www.youtube.com/watch?v=yToItqD5t0E
+  - https://www.youtube.com/watch?v=_XHZOTVIrAA
