--- a/static/recipes/100-creme-brulee.yml
+++ b/static/recipes/100-creme-brulee.yml
@@ -9,103 +9,44 @@ ingredients:
   - name: eggYolk
     percentage: 20
   - name: whiteSugar
-    percentage: 8
-presetTotalIngredient: 640
+    percentage: 12
+presetTotalIngredient: 660
 process:
   fr: |
-    Cuisson 110°C 1h10 ventilé (mesuré à 15.5°C à froid)
-    Cuisson 110°C 1h07 conventionel (mesuré à 17.5°C à froid)
-    106g par ramequin
-    Testé avec 20-23% de jaune d'oeuf
-    Testé avec 75/25 creme/lait
-    Testé avec 83/17 creme/lait (15% sucre, 17% jaune oeuf)
+    1. Mélanger la crème et le lait, porter à ébuillition puis réserver
+    2. Clarifier les oeufs et blanchir les jaunes d'oeufs avec le lait
+    3. Mélanger le lait, la crème et les oeufs
+    4. Cuisson four 110C 1h10 sous bain marie
+    5. Doit se tenir et être légèrement tremblotante
+    6. Refroidir au frigo min 2h
 notes:
   fr: |
-    1 jaune d'oeuf ~= 20g
+    - 1 jaune d'oeuf ~= 20g
+    - 6 ramequins de 106g
+    - Ne pas trop fouetter pour éviter les bulles d'air
+references:
+  - https://www.youtube.com/watch?v=sEtosp-_z1I
+  - https://www.youtube.com/watch?v=lROX8gJ8SPE
+  - https://philippe-etchebest.com/la-creme-brulee/
 
+# Cuisson 110°C 1h10 ventilé (mesuré à 15.5°C à froid)
+# Cuisson 110°C 1h07 conventionel (mesuré à 17.5°C à froid)
 
-# | Creme brulée      |
-# | ----------------- | -------- |
-# | Lait entier       | 250      |
-# | Creme entiere 30% | 250      |
-# | Jaune oeuf        | 5        | 83 |
-# | Sucre             | 40       |
-# | Gousse vanille    | 1        |
-# | Sel               | 1 pincée |
-# | Cassonade         | 20       |
-# | Total             | -        |
+# Testé avec 20-23% de jaune d'oeuf
+# Testé avec 75/25 creme/lait
+# Testé avec 83/17 creme/lait (15% sucre, 17% jaune oeuf)
 
-# - Faire chauffer à ébullition lait, creme, vanille et laisser tiédir
-# - Blanchir jaune oeuf + sucre
-# - Cuisson 100C 45min-1h
-#   - avec vapeur ?
-
-# - Tester 60g sucre 103/20
-
-# # References
-# - https://www.youtube.com/watch?v=sEtosp-_z1I
 
 # ---
-# | Creme brulée      |
-# | ----------------- | --- |
-# | Lait entier       | 50  |
-# | Creme entiere 30% | 500 |
-# | Jaune oeuf        | 6   |
-# | Sucre             | 75  |
-# | Cassonade         | 50  |
-# | Total             | -   |
-
-# - Blanchir jaune oeuf + sucre
-# - Ajouter le lait, ajouter la creme
-# - Cuisson 110C 1h-1h15 avec vapeur
-# - Cassonade + chahumeau
-
-# # References
-# - https://www.youtube.com/watch?v=lROX8gJ8SPE
-# ventilé ?
-
-
-
-# | Creme brulée      |
-# | ----------------- | -------- |
-# | Lait entier       | 250      |
-# | Creme entiere 30% | 250      |
-# | Jaune oeuf        | 5        | 83 |
-# | Sucre             | 40       |
-# | Gousse vanille    | 1        |
-# | Sel               | 1 pincée |
-# | Cassonade         | 20       |
-# | Total             | -        |
-
-# - Faire chauffer à ébullition lait, creme, vanille et laisser tiédir
-# - Blanchir jaune oeuf + sucre
-# - Cuisson 100C 45min-1h
-#   - avec vapeur ?
-
-# # Notes
-# - Jaune oeuf ~17g
-# - Tester 60g sucre 103/20
-
-# # References
-# - https://www.youtube.com/watch?v=sEtosp-_z1I
-
-# ---
-# | Creme brulée      |
-# | ----------------- | --- |
-# | Lait entier       | 50  |
-# | Creme entiere 30% | 500 |
-# | Jaune oeuf        | 6   |
-# | Sucre             | 75  |
-# | Cassonade         | 50  |
-# | Total             | -   |
-
-# - Blanchir jaune oeuf + sucre
-# - Ajouter le lait, ajouter la creme
-# - Cuisson 110C 1h-1h15 avec vapeur
-# - Cassonade + chahumeau
-
 # - https://www.ricardocuisine.com/recettes/4016-creme-brulee
-# - https://www.lesoeufs.ca/recettes/creme-brulee
+# tester cuisson 40mins 165C
 # - https://erableduquebec.ca/recettes/creme-brulee-a-lerable/
+# tester cuisson 30mins 180C
 # - https://ici.radio-canada.ca/tele/la-cuisine-d-isabelle-et-ricardo/site/segments/recette/478943/creme-brulee-dessert
-# - https://philippe-etchebest.com/la-creme-brulee/?utm_source=Youtube&utm_medium=Description&utm_campaign=100
+# https://ici.radio-canada.ca/mordu/recettes/8888/creme-brulee-cafe
+# eau à moitié des ramequins
+# 35-40mins 150C
+# pas sortir du four direct ?
+# ---
+# Premier cuisson à la casserole
+# https://www.youtube.com/watch?v=PQXyUI7a7x4
